# openscad-studio

./: .env.example  .gitignore  .impeccable.md  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  PRE_RELEASE_CHECKLIST.md  PRODUCT_ROADMAP.md  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  engineering-roadmap.md  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  skills-lock.json  skills.sh.json  test-formatter.mjs  test-formatter.scad  wdio.conf.js
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-pr-preview.yml  (+5 more)
apps/ui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/scripts/: download-openscad.sh  resign-bundled-openscad.sh
apps/ui/src-tauri/src/: agent_sidecar.rs  ai_agent.rs  history.rs  lib.rs  main.rs  mcp.rs  types.rs
apps/ui/src-tauri/src/cmd/: ai.rs  ai_tools.rs  conversations.rs  history.rs  locate.rs  mod.rs  models.rs  render.rs
apps/ui/src-tauri/src/utils/: cache.rs  parser.rs
docs/: analytics.md  coordinate-system.md  index.html  styles.css
e2e/: global-setup.ts  global-teardown.ts
implementation-plans/: 2d-measurement-angle-lock.md  2d-measurement-geometry-snapping.md  2d-measurement-ux-overhaul.md  2d-viewer-feature-expansion.md  2d-viewer-outline-pinch-zoom.md  3d-viewer-inspection-foundation.md  ai-2d-diagnostics-dimension-fallback.md  ai-edit-render-trigger.md  ai-transcript-auto-scroll.md  analytics-ai-privacy-hardening.md  analytics-privacy-copy.md  annotation-aware-ai-prompting.md  bug-triager-2026-03-28.md  cascade-shortcuts-help-menu.md  checkpoint-customizer-restore-sync.md  ci-format-fix-v010.md  ci-lint-format-cleanup.md  ci-pr-only-main-skips.md  color-preview-support.md  create-feature-skill-pr-preview.md  customizer-collapsible-sections.md  customizer-e2e-flake-hardening.md  customizer-first-ui-polish.md  customizer-parameter-search.md  customizer-reset-baseline-lifecycle.md  customizer-textarea-support.md  dependency-aware-render-cache-invalidation.md  desktop-empty-folder-open.md  desktop-mcp-render-bridge.md  diagnostics-console-virtualization.md  e2e-ci-runtime-and-cancellation.md  e2e-fixture-load-stability.md  e2e-remaining-failures.md  e2e-stable-selectors-and-preview-sync.md  e2e-viewer-toggle-fix.md  expandable-ai-thinking-blocks.md  export-dialog-project-context.md  floating-viewer-side-rail.md  formatter-inline-comment-keyboard-layout.md  formatter-numeric-prefixed-module-calls.md  (+38 more)
playwright-report/: index.html
scripts/: README.md  release.sh  test-release.sh  validate-changes.sh
(+654 files in other folders)
