[package]
name = "openscad-studio"
version = "0.5.0"
description = "Modern OpenSCAD editor with AI assistance"
authors = ["OpenSCAD Studio Contributors"]
edition = "2021"

[lib]
name = "openscad_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"
regex = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
diffy = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
similar = "2"
lazy_static = "1.5"
tauri-plugin-process = "2"

