[package]
name = "openscad-studio"
version = "0.9.0"
description = "Modern OpenSCAD editor with AI assistance"
authors = ["OpenSCAD Studio Contributors"]
edition = "2021"
license = "GPL-2.0"

[lib]
name = "openscad_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diffy = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
similar = "2"

