[package]
name = "openscad-studio"
version = "1.2.1"
description = "Modern OpenSCAD editor with AI assistance"
authors = ["OpenSCAD Studio Contributors"]
edition = "2021"
license = "GPL-2.0"

[lib]
name = "openscad_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diffy = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
similar = "2"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["net", "sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7" }
axum = "0.8"
schemars = "0.8"
futures = "0.3"
